OZ-340: Refactoring from Ozone rebranding.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,17 +1,58 @@
-.oz-green {
-  color: #007d79;
+@font-face {
+  font-family: "Recoleta"; 
+  font-weight: normal; 
+  font-style: normal;
+  src: url("../fonts/Recoleta.woff2");
+}
+
+@font-face {
+  font-family: "Geist"; 
+  font-weight: normal; 
+  font-style: normal;
+  src: url("../fonts/Geist-Regular.ttf");
+}
+
+:root {
+  --md-primary-fg-color: #3cb393;
+  --md-default-bg-color: #fcf4e5;
+  background:            var(--md-default-bg-color)
+}
+
+body {
+  --md-default-bg-color: #fcf4e5 !important;
+}
+
+footer {
+  --md-footer-bg-color:  #141324;
+}
+
+code {
+  --md-code-bg-color:    #fefaf4 !important;
+}
+
+.md-ellipsis {
+  font-family: "Recoleta"; 
+  font-size: 110%;
+}
+
+.md-nav__item {
+  font-family: "Recoleta"; 
+}
+
+.md-header__button.md-logo img, .md-header__button.md-logo svg {
+    height: 1.5rem;
+}
+
+.md-tabs__link {
+  font-size: 1.5em;
 }
 
 .md-typeset .admonition {
-  font-size: 100%;
-}
-
-.md-typeset .admonition-title {
-  font-weight: 500;
+  font-size: 90%;
 }
 
 .md-typeset {
-  font-size: 140%;
+  font-size: 150%;
 }
 
 .md-typeset .small-title {
@@ -19,12 +60,18 @@
   font-weight: 500;
 }
 
+.md-typeset h1 {
+  font-family: "Recoleta"; 
+}
+
 .md-typeset h2 {
+  font-family: "Recoleta"; 
   font-size: 155%;
   font-weight: 500;
 }
 
 .md-typeset h3 {
+  font-family: "Recoleta";
   font-size: 120%;
   font-weight: 500;
 }
@@ -42,12 +89,6 @@
 
 .md-typeset h6 {
   font-size: 120%;
-}
-
-:root {
-  --md-primary-fg-color:        #007d79;
-  --md-primary-fg-color--light: #007d79;
-  --md-primary-fg-color--dark:  #007d79;
 }
 
 .secondary {
