--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -35,6 +35,14 @@ code {
   font-family: "Recoleta"; 
 }
 
+.md-header__button.md-logo img, .md-header__button.md-logo svg {
+    height: 1.5rem;
+}
+
+.md-tabs__link {
+  font-size: 1.5em;
+}
+
 .md-typeset .admonition {
   font-size: 90%;
 }
