--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -30,21 +30,23 @@ code {
   --md-code-bg-color:    #fefaf4 !important;
 }
 
-.md-ellipsis {
-  font-family: "Recoleta"; 
-  font-size: 110%;
-}
-
-.md-nav__item {
-  font-family: "Recoleta"; 
-}
-
 .md-header__button.md-logo img, .md-header__button.md-logo svg {
     height: 1.5rem;
 }
 
+.md-header__topic  {
+  font-family: "Recoleta"; 
+}
+
 .md-tabs__link {
-  font-size: 1.5em;
+  font-family: "Recoleta"; 
+  font-size: 1.75em;
+}
+
+ul li label.md-nav__link span,
+.md-nav__title {
+  font-family: "Recoleta"; 
+  font-size: 1.25em;
 }
 
 .md-typeset .admonition {
